[build-system]
requires = ["setuptools", "wheel", "flit_core >=3.4,<4","Cython"]
build-backend = "flit_core.buildapi"



[project]
name = "omicverse"
version = "1.7.8rc1"
description = "OmicVerse: A single pipeline for exploring the entire transcriptome universe"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Zehua Zeng", email = "starlitnightly@gmail.com"},
]
keywords = ["bioinformatics", "deep-learning", "scRNA-seq", "RNA-seq"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
    'tomli',
    'numpy>=1.23',
    'scanpy>=1.9',
    'pandas>=1.5',
    'matplotlib>3.6',
    'scikit-learn',
    'scipy',
    'networkx>=2.8',
    'multiprocess>=0.70',
    'seaborn>=0.11',
    'datetime>=4.5',
    'statsmodels>=0.13',
    'ipywidgets>=8.0',
    'lifelines>=0.27',
    'ktplotspy>=0.1',
    'python-dotplot>=0.0.1',
    'boltons>=23.0',
    'ctxcore>=0.2',
    'termcolor>=2.1',
    'pygam>=0.8.0',
    'pillow>=9.0',
    'gdown>=4.6',
    'igraph>=0.10',
    'leidenalg>=0.9',
    'graphtools>=1.5',
    'tqdm>=4.64',
    'pydeseq2>=0.4.1',
    'mofax>=0.3',
    'adjustText>=0.8',
    'scikit-misc>=0.1',
    'metatime>=1.3.0',
    'einops>=0.6',
    'tensorboard>=2.6',
    'pynvml',
    'plotly',
    'numba>=0.56',
    'tqdm',
    'requests>=2.0',
    'transformers>=0.30',
    'marsilea',
    'wandb',
    'pyarrow==20.0.0',
    'flowsom',
    'PhenoGraph',
    'pacmap',
    'fasttreeshap',
    'fcsy',
    'cytonormpy'

]

[project.optional-dependencies]
full = [
  "dynamo-release",
  "squidpy",
  "tangram-sc",
  "pertpy",
  "toytree",
  "arviz",
  "ete3",
  "scvi-tools",
  #"celloracle",
  "pymde",
  'torchdr',
  'memento-de'
]


[project.urls]
Github = 'https://github.com/Starlitnightly/omicverse'

[tool.flit.sdist]
exclude = [".*", "d*", "e*", "pa*", "s*", "t*"]

